# aoc24

day1/src/: main.rs
day2/: program.ua  shell.nix
day3/: flake.nix  program.ts
day4/: program.cpp
day5/: program.ts
day6/: day6.cabal  flake.nix  loop_input.txt
day6/src/: Main.hs
day7/: .gitignore  day7.cabal  flake.nix
day7/src/: Main.hs
