cabal-version:   3.0
name:            day6
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable day6
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base
      , containers
      , mtl
    hs-source-dirs:   src
    default-language: GHC2024
